force-app/main/default/objects/Lead_Route_Act_Snapshot__c/Lead_Route_Act_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Loop2 Act snapshot - captures LUMEN routing decision</description>
    <label>Lead Route Act Snapshot</label>
    <nameField>
        <label>Lead Route Act Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Route Act Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>