force-app/main/default/objects/Lead_Route_Act_Snapshot__c/fields/Loop1_Verdict__c.field-meta.xml
<CustomField>
    <fullName>Loop1_Verdict__c</fullName>
    <label>Loop1 Verdict</label>
    <type>Text</type>
    <length>50</length>
</CustomField>