force-app/main/default/objects/Lead_Route_Act_Snapshot__c/fields/Route_Read_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Route_Read_Snapshot__c</fullName>
    <label>Route Read Snapshot</label>
    <type>Lookup</type>
    <referenceTo>Lead_Route_Read_Snapshot__c</referenceTo>
    <relationshipLabel>Route Act Snapshots</relationshipLabel>
    <relationshipName>Route_Act_Snapshots</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>