force-app/main/default/objects/Lead_Route_Act_Snapshot__c/fields/Route_Reason__c.field-meta.xml
<CustomField>
    <fullName>Route_Reason__c</fullName>
    <label>Route Reason</label>
    <type>LongTextArea</type>
    <length>1000</length>
</CustomField>